--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./assets/css/global.css">
-  <script src="./assets/scripts/timer.js" defer></script>
-  <script src="./assets/scripts/cores.js" defer></script>
-  <script src="./assets/scripts/conta.js" defer></script>
+  <script src="./src/JS/timer.js" defer></script>
+  <script src="./src/JS/conta.js" defer></script>
+  <script src="./src/JS/cores.js" defer></script>
   
   <title>Site do CP2</title>
 </head>
@@ -38,6 +38,10 @@
         <li>Blue</li>
         <li>Red</li>
         <li>Purple</li>
+        <li>Yellow</li>
+        <li>Green</li>
+        <li>Pink</li>
+        <li>Orange</li>
       </ul>
     </section>
 
