--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./assets/css/global.css">
-  <script src="./src/JS/timer.js" defer></script>
-  <script src="./src/JS/conta.js" defer></script>
-  <script src="./src/JS/cores.js" defer></script>
+  <link rel="stylesheet" href="./src/css/global.css">
+  <script src="./src/scripts/timer.js" defer></script>
+  <script src="./src/scripts/cores.js" defer></script>
+  <script src="./src/scripts/conta.js" defer></script>
   
   <title>Site do CP2</title>
 </head>
